
Version 0.25
xx-xx-18 Adrian Rossiter <adrian@antiprism.com>
         New Programs
            stellate: polyhedron stellations (Roger Kaufman)
            miller: Miller's stellations of the icosahedron (Roger Kaufman)
            wythoff: Wythoff-style tilings on various surfaces
         Changes
            poly_weave: moved to unsupported programs
         Fixes
            poly_weave: input can be non-closed surface
            off_util: -u input can be non-closed surface

Version 0.24.1
18-11-16 Adrian Rossiter <adrian@antiprism.com>
         Fixes
            symmetro: docs

Version 0.24
08-10-16 Adrian Rossiter <adrian@antiprism.com>
         New Programs
            to_nfold: change the rotational symmetry of a polyhedron
            symmetro: polyhedra with regular polygons at symmetry
              axes (Roger Kaufman)
            off2obj/obj2off: convert between OFF to Wavefront OBJ
              format (Roger Kaufman)
            off2dae: convert OFF to Collada (DAE) format
         Changes
            off_util: process options in command line order,
              incorporate -b into -M, expand -D and add -K to keep
              elements (Roger Kaufman), expand documentation.
            minmax: new option -a u, make faces regular. Improve
              reporting.
            leonardo: orient models, new options -c centre, -p panel faces,
              -k don't orient
            zono: -P add nonconvex models, new option -S zonish polyhedra
            off_normals: options -t and -m removed
            off_color: new edge direction colourings -e ldD
            antiview: 'O' to show orientation, 't' includes 50%
              transparency
            build: native Debian/Ubuntu package build, support FLTK GLUT
         Fixes
            off_util -u: natural unfolding for positive orientation
            off_align: fix crashes
            off2pov: fix compatibility with POV-Ray 3.7
            symmetry: fix missing subsyms
            minor bug fixes
